# TeaLeaf

./: .gitignore  README.md  config.toml  hteapot_py  pyproject.toml
.zed/: debug.json
demo/: demo.py  demo_asgi.py  demo_wsgi.py
docs/: PY2JS.md
src/: demo.py  demo_cgi.py  demo_wsgi.py  example.py  index.html
src/CGIpy/html/: HTMLElements.py
src/TeaLeaf/: CGI.py  Server.py  WSGI.py  utils.py  worker.js
src/TeaLeaf.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/TeaLeaf/Html/: Component.py  Elements.py  JS.py  JSCode.py  MagicComponent.js  MagicComponent.py
src/TeaLeaf/Magic/: Common.py  JSCode.py  LocalState.py  MagicComponent.py  Store.py
src/TeaLeaf/MagicFunction/: Store.js  Store.py
src/TeaLeaf/Server/: ASGI.py  CGI.py  Server.py  WSGI.py  helper.js  worker.js
src/TeaLeaf/html/: Component.py  HTMLElements.py  __init__.py
