[project]
name = "TeaLeaf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gunicorn>=23.0.0",
    "pyrefly>=0.37.0",
    "uvicorn>=0.34.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"TeaLeaf.Server" = ['*.js']
